force-app/main/default/objects/AddEmployeeFieldSetting__c/AddEmployeeFieldSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AddEmployeeFieldSetting</label>
</CustomObject>