force-app/main/default/objects/AddEmployeeFieldSetting__c/fields/component__c.field-meta.xml
<CustomField>
    <fullName>component__c</fullName>
    <label>component</label>
    <type>TextArea</type>
</CustomField>