force-app/main/default/objects/AddEmployeeFieldSetting__c/fields/date__c.field-meta.xml
<CustomField>
    <fullName>date__c</fullName>
    <label>date</label>
    <type>TextArea</type>
</CustomField>