force-app/main/default/objects/AddEmployeeFieldSetting__c/fields/Disabled__c.field-meta.xml
<CustomField>
    <fullName>Disabled__c</fullName>
    <label>Disabled</label>
    <type>TextArea</type>
</CustomField>