force-app/main/default/objects/AddEmployeeFieldSetting__c/fields/planField__c.field-meta.xml
<CustomField>
    <fullName>planField__c</fullName>
    <label>planField</label>
    <type>TextArea</type>
</CustomField>