force-app/main/default/objects/AddEmployeeFieldSetting__c/fields/required__c.field-meta.xml
<CustomField>
    <fullName>required__c</fullName>
    <label>required</label>
    <type>TextArea</type>
</CustomField>