force-app/main/default/objects/AddEmployeeFieldSetting__c/fields/select__c.field-meta.xml
<CustomField>
    <fullName>select__c</fullName>
    <label>select</label>
    <type>TextArea</type>
</CustomField>