force-app/main/default/objects/AddEmployeeFieldSetting__c/fields/text__c.field-meta.xml
<CustomField>
    <fullName>text__c</fullName>
    <label>text</label>
    <type>TextArea</type>
</CustomField>